dnl 
dnl  $Id$
dnl  autoconf file: havoc
dnl
dnl  Copyright (c) 2000 raptor <raptor@antifork.org>
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
dnl
dnl  Process this file with autoconf to produce a configure script.

AC_INIT(main.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
dnl --------------------

AC_CANONICAL_SYSTEM
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Check and set OS specific parameters.
dnl -------------------------------------

case "$target_os" in
*linux*)
    ;;
*openbsd*)
    ;;
*freebsd*)
    ;;
*netbsd*)
    ;;
*bsdi*)
    ;;

esac



dnl
dnl check if sockaddr has sa_len member.
dnl
dnl learnt from nmap2.3BETAx fyodor http://www.insecure.org 
dnl

AC_CACHE_CHECK(if sockaddr has sa_len member, ac_cv_sockaddr_has_sa_len,
        AC_TRY_COMPILE([
#               include <sys/types.h>
#               include <sys/socket.h>],
                [unsigned int i = sizeof(((struct sockaddr *)0)->sa_len)],
        ac_cv_sockaddr_has_sa_len=yes,
        ac_cv_sockaddr_has_sa_len=no))
if test $ac_cv_sockaddr_has_sa_len = yes ; then
	APING_CONF_DEFS="$APING_CONF_DEFS -DHAVE_SOCKADDR_SALEN"
fi


dnl Checks for header files.
dnl ------------------------

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h sys/ioctl.h syslog.h unistd.h getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl --------------------------------------------------------------

AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
dnl -----------------------------

AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getopt_long gettimeofday socket strerror)

AC_OUTPUT(Makefile)
